# saleor-sdk-python

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: .pages  index.md  tools.md
docs/css/: extra.css
docs/examples/: simple.md
docs/examples/simple/: app.py
examples/simple/: index.html
overrides/partials/: copyright.html
search/: search_index.json
src/saleor_sdk/: __main__.py
src/saleor_sdk/console/: app.py  develop.py  tools.py
src/saleor_sdk/crypto/: exceptions.py  utils.py
src/saleor_sdk/crypto/tests/: conftest.py  test_utils.py
src/saleor_sdk/marina/: auth.py  client.py  config.py  exceptions.py  install.py  jwks.py  utils.py
src/saleor_sdk/marina/tests/: conftest.py  test_auth.py  test_config.py  test_install.py  test_utils.py
src/saleor_sdk/schemas/: enums.py  manifest.py
tools/: index.html
