[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saleor-sdk-python"
version = "0.1.3"
description = "A set of helpers and tools for a Saleor related Python project."
authors = [{ name = "Mirumee Software", email = "hello@mirumee.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click~=8.0",
    "toml~=0.10",
    "pydantic~=1.0",
    "cryptography>=39",
    "pyjwt~=2.8",
]
requires-python = ">=3.8"

[project.urls]
"Repository" = "https://github.com/mirumee/saleor-sdk-python"
"Bug Tracker" = "https://github.com/mirumee/saleor-sdk-python/issues"
"Community" = "https://github.com/mirumee/saleor-sdk-python/discussions"

[project.scripts]
saleor-sdk = 'saleor_sdk.console.app:cli'

[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
    "ipdb",
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "coverage run -m pytest"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs-material~=8.0",
    "mdx-include~=1.4.2",
    "pygments-graphql~=1.0.0",
    "mkdocs-awesome-pages-plugin~=2.8.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.envs.examples]
dependencies = ["httpx", "fastapi", "uvicorn"]


[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.isort]
profile = "black"


[tool.hatch.build]
sources = ["src"]
include = ["src/saleor_sdk/**/*.py"]
exclude = ["tests"]
